--- a/package.json
+++ b/package.json
@@ -14,11 +14,22 @@
     "start": "tsdx watch",
     "build": "tsdx build",
     "test": "tsdx test --passWithNoTests",
+    "test:watch": "tsdx test --watch",
     "lint": "tsdx lint",
     "prepare": "tsdx build",
     "size": "size-limit",
     "analyze": "size-limit --why"
   },
+  "repository": {
+    "url": "https://github.com/ZarateAF/zaf-product-card",
+    "type": "git"
+  },
+  "keywords": [
+    "product",
+    "card",
+    "federico",
+    "zarate"
+  ],
   "peerDependencies": {
     "react": "^17.0.2"
   },
@@ -49,9 +60,10 @@
   "devDependencies": {
     "@rollup/plugin-image": "^2.1.1",
     "@size-limit/preset-small-lib": "^7.0.5",
-    "@types/react": "^17.0.38",
+    "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "husky": "^7.0.4",
+    "identity-obj-proxy": "^3.0.0",
     "react": "*",
     "react-dom": "^17.0.2",
     "rollup-plugin-postcss": "^4.0.2",
@@ -59,5 +71,19 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^3.9.10"
+  },
+  "dependencies": {
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@types/react-test-renderer": "^17.0.1",
+    "babel-jest": "^25.5.1",
+    "jest": "^25.5.4",
+    "react-test-renderer": "^17.0.2"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "identity-obj-proxy",
+      "\\.(css|less|scss|sass)$": "identity-obj-proxy"
+    }
   }
 }
